home-k8s/apps/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  replicas: 0
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-webui
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:v0.10.2@sha256:0d58a66704d69e52da83f72bcd43869ad4fd0c761313778bc95ef6940a0b81e3
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: open-webui
              mountPath: /app/backend/data
              subPath: app/backend/data
      volumes:
        - name: open-webui
          persistentVolumeClaim:
            claimName: open-webui
