home-k8s/apps/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
spec:
  tls:
    - hosts:
        - chat.sigurs.io
      secretName: open-webui-tls
  rules:
    - host: chat.sigurs.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: open-webui
              port:
                name: http
